// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout goldens > careerBacon null @beside 1`] = `
{
  "attrs": "67cc2aa417810612",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon null @phone 1`] = `
{
  "attrs": "8e79273b1cfea043",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon null @stacked 1`] = `
{
  "attrs": "3e54184c4657c6dc",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerMany null @beside 1`] = `
{
  "attrs": "e19142dce06b19c4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany null @phone 1`] = `
{
  "attrs": "a8570de7fa655103",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany null @stacked 1`] = `
{
  "attrs": "ede9ea6929704f5b",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerTrio null @beside 1`] = `
{
  "attrs": "e19142dce06b19c4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio null @phone 1`] = `
{
  "attrs": "a8570de7fa655103",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio null @stacked 1`] = `
{
  "attrs": "ede9ea6929704f5b",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > chapterCenters null @beside 1`] = `
{
  "attrs": "435db61c4edbb832",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > chapterCenters null @phone 1`] = `
{
  "attrs": "31108aefe1ca0255",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > chapterCenters null @stacked 1`] = `
{
  "attrs": "795eaf5e7dd6832c",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter null @beside 1`] = `
{
  "attrs": "59898d349eeea30b",
  "decor": "3cd4cf2f19de1c77",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter null @phone 1`] = `
{
  "attrs": "81867654d8c39c4c",
  "decor": "01726c8a027a3041",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter null @stacked 1`] = `
{
  "attrs": "f6d5f505e06209fa",
  "decor": "12ec67038d8be0f4",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @beside 1`] = `
{
  "attrs": "9a96837384c72ac9",
  "decor": "444144cfce5205c4",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @phone 1`] = `
{
  "attrs": "2f7d2cffec85a741",
  "decor": "ce6a6c42ee933f80",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @stacked 1`] = `
{
  "attrs": "4591aad09fe7b853",
  "decor": "52bd339a49a26d6a",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @beside 1`] = `
{
  "attrs": "0fafc25f849e9af2",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @phone 1`] = `
{
  "attrs": "366706f63875f9d5",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @stacked 1`] = `
{
  "attrs": "1fa6dc7f7b93dca0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > lone null @beside 1`] = `
{
  "attrs": "358faa4d35a54e5f",
  "decor": "bf21a9e8fbc5a384",
  "delays": "af0a2200819002d9",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > lone null @phone 1`] = `
{
  "attrs": "fbbcc533e5d02a00",
  "decor": "bf21a9e8fbc5a384",
  "delays": "af0a2200819002d9",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > lone null @stacked 1`] = `
{
  "attrs": "eb37a2af46337f74",
  "decor": "bf21a9e8fbc5a384",
  "delays": "af0a2200819002d9",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @beside 1`] = `
{
  "attrs": "abfa754e2987ec5f",
  "decor": "8dd5b5ea90ee296f",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @phone 1`] = `
{
  "attrs": "d95100eddfa7a8f3",
  "decor": "37169a917f2f47cd",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @stacked 1`] = `
{
  "attrs": "655457b3286e8977",
  "decor": "8dd5b5ea90ee296f",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @beside 1`] = `
{
  "attrs": "358faa4d35a54e5f",
  "decor": "a08dbc91da2d8877",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @phone 1`] = `
{
  "attrs": "fbbcc533e5d02a00",
  "decor": "1e5e936ee2a6c912",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @stacked 1`] = `
{
  "attrs": "eb37a2af46337f74",
  "decor": "a08dbc91da2d8877",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > outro {"playhead":2006} @beside 1`] = `
{
  "attrs": "4967ba0dbf3a175a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @phone 1`] = `
{
  "attrs": "e9bcf932b9059406",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @stacked 1`] = `
{
  "attrs": "f0fb89bff910d0c2",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > outro null @beside 1`] = `
{
  "attrs": "5717dabd133901e0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "c031769f740452b6",
}
`;

exports[`layout goldens > outro null @phone 1`] = `
{
  "attrs": "84af82ab145d00ff",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "59efcd1d42df7b1c",
}
`;

exports[`layout goldens > outro null @stacked 1`] = `
{
  "attrs": "5470a17e185729a7",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "5ffb5268d13877bd",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @beside 1`] = `
{
  "attrs": "6055d6a96f6107e1",
  "decor": "2c20a329f2d1e918",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @phone 1`] = `
{
  "attrs": "55423734c099d1de",
  "decor": "ea7496a03ee12ae6",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @stacked 1`] = `
{
  "attrs": "238070deee60ac59",
  "decor": "44c7a63c8d39accf",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > raceClose null @beside 1`] = `
{
  "attrs": "1cab45610f016c03",
  "decor": "dbf06921837e2677",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "0a546b0343ce8b62",
}
`;

exports[`layout goldens > raceClose null @phone 1`] = `
{
  "attrs": "84ecfae99d87d41c",
  "decor": "8701da77a0374fbb",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "182bc02f27bb6162",
}
`;

exports[`layout goldens > raceClose null @stacked 1`] = `
{
  "attrs": "3f11070ae2b96b6d",
  "decor": "b7661f51c9c0e0e1",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "7281bd7494f49223",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "de149b03213ebaec",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "a94d821bb197ae22",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "37a51dffc38d3888",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFull null @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "de149b03213ebaec",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull null @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "a94d821bb197ae22",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull null @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "37a51dffc38d3888",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "de149b03213ebaec",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "a94d821bb197ae22",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "37a51dffc38d3888",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture null @beside 1`] = `
{
  "attrs": "09760dacf7f43801",
  "decor": "40c85b10f78c5efb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "baa62b8efd28bccd",
}
`;

exports[`layout goldens > raceFuture null @phone 1`] = `
{
  "attrs": "1d2e20ab5621cbfb",
  "decor": "4ce3f2ed82d41bc8",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "4e7e7e8dcddf433c",
}
`;

exports[`layout goldens > raceFuture null @stacked 1`] = `
{
  "attrs": "0234e87fb5a0f822",
  "decor": "1daf13ad8373728d",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5738335dca2809d7",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @beside 1`] = `
{
  "attrs": "acf21fc289fcdcbf",
  "decor": "be21d50f35342d07",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "6f8c123077a61174",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @phone 1`] = `
{
  "attrs": "c9fbd7329ea054d5",
  "decor": "5ef50869ed3f9bf3",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "603a762f8da4c554",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @stacked 1`] = `
{
  "attrs": "b5accbf1a13790b2",
  "decor": "2af119c9cbc898cc",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "0c6a09f391f72dc9",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @beside 1`] = `
{
  "attrs": "2ea9dc18e77aba7f",
  "decor": "be21d50f35342d07",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9afe89bf5acd5af0",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @phone 1`] = `
{
  "attrs": "e2ebd5eaea5189a5",
  "decor": "5ef50869ed3f9bf3",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a17d0ad72b49a8aa",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @stacked 1`] = `
{
  "attrs": "019e61bfd556481b",
  "decor": "2af119c9cbc898cc",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "8b0358b30eebcb40",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @beside 1`] = `
{
  "attrs": "c74c59ace0536ea3",
  "decor": "771b8f3fb6568a3a",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "2560ef22c8b64d11",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @phone 1`] = `
{
  "attrs": "a7d91d6fa6aa14ee",
  "decor": "1e9569a66e2da2fb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "dea7faaffed54966",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @stacked 1`] = `
{
  "attrs": "55c0991ff815e7ec",
  "decor": "d09faaea035ec896",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5b19ddb8fabff428",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @beside 1`] = `
{
  "attrs": "d02b5ee0e7bbef58",
  "decor": "de149b03213ebaec",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @phone 1`] = `
{
  "attrs": "99e855c7dd2bfda0",
  "decor": "a94d821bb197ae22",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @stacked 1`] = `
{
  "attrs": "58cb3280323e3c8a",
  "decor": "37a51dffc38d3888",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceRecent null @beside 1`] = `
{
  "attrs": "6c98c2133008a495",
  "decor": "57d2d92824c73691",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "2d80856a7a49b4e4",
}
`;

exports[`layout goldens > raceRecent null @phone 1`] = `
{
  "attrs": "1d508a318fefbb06",
  "decor": "69c4f08fc0258164",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "f0596c752e115b44",
}
`;

exports[`layout goldens > raceRecent null @stacked 1`] = `
{
  "attrs": "2d1e3ec235295e91",
  "decor": "ac4718dca178a9ce",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "00d49dfbfd22ac56",
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400}} @beside 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400}} @phone 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400}} @stacked 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null} @beside 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null} @phone 1`] = `
{
  "attrs": "135546ead4035805",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null} @stacked 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400}} @beside 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400}} @phone 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400}} @stacked 1`] = `
{
  "attrs": "ef4a5110c6e29864",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null} @beside 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null} @phone 1`] = `
{
  "attrs": "135546ead4035805",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null} @stacked 1`] = `
{
  "attrs": "61264c35ade46041",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true} @beside 1`] = `
{
  "attrs": "d4d89be7dda8103d",
  "decor": "8f4ddee0611f9e16",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true} @phone 1`] = `
{
  "attrs": "0b30e3e7410f040a",
  "decor": "3b6dd0eef9339c12",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true} @stacked 1`] = `
{
  "attrs": "6da41b475f2d5d82",
  "decor": "bbc0c7b6c446d5de",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true} @beside 1`] = `
{
  "attrs": "cb81ea1b3e4d567b",
  "decor": "8f4ddee0611f9e16",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true} @phone 1`] = `
{
  "attrs": "5747288aa1b5a238",
  "decor": "3b6dd0eef9339c12",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true} @stacked 1`] = `
{
  "attrs": "25103531f8241408",
  "decor": "bbc0c7b6c446d5de",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true} @beside 1`] = `
{
  "attrs": "cb81ea1b3e4d567b",
  "decor": "8f4ddee0611f9e16",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true} @phone 1`] = `
{
  "attrs": "5747288aa1b5a238",
  "decor": "3b6dd0eef9339c12",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true} @stacked 1`] = `
{
  "attrs": "25103531f8241408",
  "decor": "bbc0c7b6c446d5de",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true} @beside 1`] = `
{
  "attrs": "2dd5cb02adfce873",
  "decor": "8f4ddee0611f9e16",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true} @phone 1`] = `
{
  "attrs": "0ea8cd99e702471f",
  "decor": "3b6dd0eef9339c12",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true} @stacked 1`] = `
{
  "attrs": "5ece39f5dbc10041",
  "decor": "bbc0c7b6c446d5de",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false} @beside 1`] = `
{
  "attrs": "55d6100215b40c10",
  "decor": "8f4ddee0611f9e16",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false} @phone 1`] = `
{
  "attrs": "9984c41becad4180",
  "decor": "3b6dd0eef9339c12",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false} @stacked 1`] = `
{
  "attrs": "15546f55b3769f67",
  "decor": "bbc0c7b6c446d5de",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @beside 1`] = `
{
  "attrs": "10226467fc237f8c",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "86b46b362892c32c",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @phone 1`] = `
{
  "attrs": "bd0800e511e95701",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "863c09ed0cd82558",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @stacked 1`] = `
{
  "attrs": "348a6018220aa3b9",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "5b995767da8e8694",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @beside 1`] = `
{
  "attrs": "69264ebc916416c6",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "af06ea4ed5fb4418",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @phone 1`] = `
{
  "attrs": "22e355645fc2d626",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "58f1c21582e9e72d",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @stacked 1`] = `
{
  "attrs": "b3a1f816c72573a1",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "d672d72b6ffa9433",
}
`;

exports[`layout goldens > titleGalaxy null @beside 1`] = `
{
  "attrs": "bab195008fba6df9",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @phone 1`] = `
{
  "attrs": "3a3d9e66202508b0",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @stacked 1`] = `
{
  "attrs": "c0bd3ec3880986a3",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;
